change z-index of search component to prevent dates in the chat overlapping the search results

--- a/src/app/features/main/search-component/search-component.component.scss
+++ b/src/app/features/main/search-component/search-component.component.scss
@@ -33,7 +33,7 @@
 }
 
 section {
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     position: relative;
 }
